# Linked-list-cpp

./: CMakeLists.txt  README.md  build.sh  compile.sh  distclean.sh  run.sh
include/: header.h
src/: linkedlist.cpp  main.cpp
src/headers/: header.h
src/includes/: header.h
